--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,13 +1,12 @@
 # Workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Deploy to Vercel
 
 on:
   # Runs on pushes targeting the main or dev branch
   push:
     branches: ["main", "dev"]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  pull_request:
+    branches: ["main", "dev"]
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -30,6 +29,23 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Install Vercel CLI
+        run: npm install --global vercel@latest
+
+      - name: Pull Vercel Environment Information
+        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+
+      - name: Build Project Artifacts
+        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
+
+      - name: Deploy Project Artifacts to Vercel
+        run: |
+          if [[ $GITHUB_REF == refs/heads/main ]]; then
+            vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+          else
+            vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+          fi
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
