--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,8 +32,14 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Set production environment
+        run: |
+          echo "NEXT_PUBLIC_BASE_PATH=/pcd-pdc-site" > .env.production
+
       - name: Build
         run: npm run build
+        env:
+          NEXT_PUBLIC_BASE_PATH: /pcd-pdc-site
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
